Update codebase to use TextDateAnnotationRequest
