# server/openapi_server/controllers/text_date_annotation_controller.py
@@ -1,9 +1,9 @@
 import connexion
 import re
 
-from openapi_server.models.annotation_request import AnnotationRequest  # noqa: E501
 from openapi_server.models.error import Error  # noqa: E501
 from openapi_server.models.note import Note  # noqa: E501
+from openapi_server.models.text_date_annotation_request import TextDateAnnotationRequest  # noqa: E501
 from openapi_server.models.text_date_annotations import TextDateAnnotations  # noqa: E501
 
 
@@ -22,7 +22,7 @@ def create_text_date_annotations(note=None):  # noqa: E501
 
     if connexion.request.is_json:
         try:
-            annotation_request = AnnotationRequest.from_dict(connexion.request.get_json())  # noqa: E501
+            annotation_request = TextDateAnnotationRequest.from_dict(connexion.request.get_json())  # noqa: E501
             note = annotation_request._note
 
             annotations = []
