# server/openapi_server/models/__init__.py
@@ -3,11 +3,11 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
-from openapi_server.models.annotation_request import AnnotationRequest
 from openapi_server.models.error import Error
 from openapi_server.models.note import Note
 from openapi_server.models.service import Service
 from openapi_server.models.text_annotation import TextAnnotation
 from openapi_server.models.text_date_annotation import TextDateAnnotation
 from openapi_server.models.text_date_annotation_all_of import TextDateAnnotationAllOf
+from openapi_server.models.text_date_annotation_request import TextDateAnnotationRequest
 from openapi_server.models.text_date_annotations import TextDateAnnotations
