# server/openapi_server/models/text_date_annotation_request.py
@@ -11,16 +11,16 @@ from openapi_server import util
 
 from openapi_server.models.note import Note  # noqa: E501
 
-class AnnotationRequest(Model):
+class TextDateAnnotationRequest(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 
     Do not edit the class manually.
     """
 
     def __init__(self, note=None):  # noqa: E501
-        """AnnotationRequest - a model defined in OpenAPI
+        """TextDateAnnotationRequest - a model defined in OpenAPI
 
-        :param note: The note of this AnnotationRequest.  # noqa: E501
+        :param note: The note of this TextDateAnnotationRequest.  # noqa: E501
         :type note: Note
         """
         self.openapi_types = {
@@ -34,32 +34,32 @@ class AnnotationRequest(Model):
         self._note = note
 
     @classmethod
-    def from_dict(cls, dikt) -> 'AnnotationRequest':
+    def from_dict(cls, dikt) -> 'TextDateAnnotationRequest':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The AnnotationRequest of this AnnotationRequest.  # noqa: E501
-        :rtype: AnnotationRequest
+        :return: The TextDateAnnotationRequest of this TextDateAnnotationRequest.  # noqa: E501
+        :rtype: TextDateAnnotationRequest
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def note(self):
-        """Gets the note of this AnnotationRequest.
+        """Gets the note of this TextDateAnnotationRequest.
 
 
-        :return: The note of this AnnotationRequest.
+        :return: The note of this TextDateAnnotationRequest.
         :rtype: Note
         """
         return self._note
 
     @note.setter
     def note(self, note):
-        """Sets the note of this AnnotationRequest.
+        """Sets the note of this TextDateAnnotationRequest.
 
 
-        :param note: The note of this AnnotationRequest.
+        :param note: The note of this TextDateAnnotationRequest.
         :type note: Note
         """
 
